# ChangeLog for media-gfx/lximage-qt
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/lximage-qt/ChangeLog,v 1.4 2014/11/08 17:44:07 jauhien Exp $

*lximage-qt-0.3.0 (08 Nov 2014)

  08 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org> +lximage-qt-0.3.0.ebuild:
  version bump

  16 Jun 2014; Michael Palimaka <kensington@gentoo.org> lximage-qt-0.2.0.ebuild:
  Pin dev-qt/qtdbus to SLOT 4.

  27 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> lximage-qt-0.2.0.ebuild:
  fix license

*lximage-qt-0.2.0 (27 May 2014)

  27 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> +lximage-qt-0.2.0.ebuild,
  +metadata.xml:
  Initial import from the qt overlay, thanks to Harvey Mittens and Davide
  Pesavento, see bug #509946