@@ -3,24 +3,28 @@ Hash: SHA256
 
 DIST lximage-qt-0.2.0.tar.xz 41240 SHA256 4750981bbf1a1a36fd581addd8d6acecb608f9660442b6831eb05639151524fb SHA512 238e1fb7795fb2b5d73132fc61942b0277d1c2b7c880f3022e4fabee754a17da013af1907ada001762271ac7ded42efbf4470990bb574d26215ff0276f4a7c16 WHIRLPOOL a09053cfb944518a3879dcf28786ad70a2b7a67cc04d4f2a737d1dadaad846c883b322aa906135f01726cf2266d78d70a94e5e619699b91718faa914787afc37
 DIST lximage-qt-0.3.0.tar.xz 41660 SHA256 0a5a5114eb1014a4e24af17d4a5d77676bac6a5d25458082e8e2eb45c87f2984 SHA512 d5af86b32cb416378f30413c65cd576d7a7f6d88f551e4749b161d64e08984254f4e1eb8f7b897bb5a334eb72b2af1c5de47109f5dd462d66b3b7fe9febc4902 WHIRLPOOL 80aea4cbb37d41a1ec2793de7a0343cd5464d197ad748b0031ac55526d311a9c753b4542428d19fd9e84263e4a1b0716b89d03ba8a86435af063d93643bd4ee1
+DIST lximage-qt-0.4.0.tar.xz 43716 SHA256 11abc99b0946e6254aad42cb3e29349dc6199879be0728418e7bc81200d59730 SHA512 6b07e16534b835da60f5845c801cad0bdd381b6deb79ad99fc44afb9b776deb3cf76c85c9e4b59ba4148d71e894f659743c002ea4baf5589e8d261eb1a19b1fa WHIRLPOOL 7db84a9fe83057ec05a9b363f7c64c0302f9fc9c1f5e62aec84520bd6a481dce709f671fdcfef46f64a89143c34457f8955d05df2641b7b29487eb3056c825ef
 EBUILD lximage-qt-0.2.0.ebuild 803 SHA256 a771ae813d64c4796e733f8d33633ddce05e86e1c2722c9f62c24f9bd70e1fee SHA512 2a0522abf32e968686e0f6efd51b793f1c7d9922977a090b0b24e79028274fd889de032b679bd85f00bc61cfac8ab2e5f0df52b23e84969772b818b6f24e7432 WHIRLPOOL b019c07ee5d892d45d6b2c2b24ab6e759ed39004929e02c0dd2522d08e67a58c89311f632e4e9b0f154edbeb340ae337abab397b6bc8aa66978701e200983ca0
 EBUILD lximage-qt-0.3.0.ebuild 1021 SHA256 efc8bde3ab3bb4668bb3e268f07231ae5d0234a158e486650082319ecbac4a4c SHA512 d68aa26723d50b90ea52e236f41c96f9fe9468809438dae2aac3a145c261362838a6677c0d236235bf02d5d555291425c8fd873eeb1096afb29bf2daeb5e0419 WHIRLPOOL 717b9464c3b1bc2b49156dcb6979ae8116118c02ce2343a1e7e7fa5c807089d8ae08ea8a4b3b9ae4c5f61ffc69a66ab7cf4b5717625b83b6e4a9a3551ad24457
-MISC ChangeLog 783 SHA256 af0a8d3e36f45918ee47e3254a4eefc2df4b247e1625e342b175c21335d47beb SHA512 ed3ee6d8c4a0ecdd297907262763e4492331e73e7d9ebe0e1e33786a8db12b8bfa53632bb2cb945dfce6011cac0852ac6b677da86795774e89df02e0169c8109 WHIRLPOOL ff7b89cbd2ecaba13f1cb7051cfb0c15037875c7864b830f3fb33a392e015af30a1f434bceab3cce3a334e404dd2f331c21be40dd653c9cc668221a5d1f7f01f
+EBUILD lximage-qt-0.4.0.ebuild 1020 SHA256 cd9c9d7fbd7b7c49b3b0dfd37a5154fffc938abbec0455b44ffd9516920ca759 SHA512 f0aba297411d47e933c28480e4977b74c7ada221222a62bc70805f75215a457e0ebe6f17161e58d33182b9fa3965fb6244bc83ba36d1624cada245166b499014 WHIRLPOOL e0dfc8075fa3479c056b5c668421889d6e7ed5e2f18e4f9e6328ddca1b4f8b5279b105280ab04bd8ab15b6f35db1b9e069cd3095a0cbd7928e41d674a1c37728
+MISC ChangeLog 905 SHA256 59c6737f29376951140083c619c24d2b3152d34d648a74e09b93ec94f712b4f9 SHA512 f9cdb0a31072ee6ead85146467ff68f0d0b1fde3566b3a021deb7cf8cac03361bfab6a3d738bc4e456c5a4ea20ab22089893a1accf520746c196130e3f94e0c0 WHIRLPOOL e279ee780a3f571956ad9dfb62a512c03e2e6e207605def14ef63210600963d7ea05a93761e607c22988e5d2e7ad677bd160a6e2061bbecf760f8be7f3dc790b
 MISC metadata.xml 263 SHA256 d23df106b61ed123144d9d24eea822badfbe6cb7d8d4ec61215af73b4c8f1fc6 SHA512 9f99b13f568e1cfda82dc35cd0b95fba565d5f18909db7b0d7dff75273cf4076a68288768ee5f65a70485833971fb3e511919a9e80d09e0d96f3a38744435d3a WHIRLPOOL 6bfa4c8737764e7450195f3ffd2e8fe8531ad44dfa02b0d7819678eeb7898280f07ed13ac87e0158abb6d9b804ee617b7683f73a4cd17db822419eba55fa62c6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUaJvmAAoJELvuk32y76HU1YkP+QHEO+QXDLcMCerwkD2HGHUH
-WJdqdjgFyFa6YqyeaYdf1TKAfM4ynw3jqbwm31U1OXrxJAwxGPVXheeaBUAdqtqa
-umI+G36FjaI0TM65pkwFU7qCQhBPRAZgbIu8RoEh23aGwxP58ADIoYBiJe+VxRsJ
-vvf34wuNPp5W7sTh0XYyYa1zFw4JI+epeEN+x9ETF7BzNyfgaFWfpsYBgDTpKam7
-WnxYG3vbA3rDWV1USsmWLMygwAcAOHV6GWhFjeTjZLG5FBrJCaMO9uqm0r+INF+W
-K2aY3CeNPtkk12ybyIw3M8O9cBLZwmofLdEnOZZuEBTYW6SkTApObQ+Epj5StElm
-u92bpsIFqQgnA8PPip68PquGqOT6ChVwOlSk0LMfsMLXFcwnglNxwbwOwv01GhS7
-LiTwdmV71knuAYvq9dPxC9pcXhhQJqHusKyo/Czgyt1OkNIqehpbGVSoag0d4xk0
-gXYr5GU+BCzwkEpy2sakWANE2AMf/x3Cw7LIdJCHGY3x9HSy5oNyBAB9V3RWui3x
-BNyTABh8dGApURPpkZd36axBhrg70Oz7FLDCOlW8YjpKlglrAKHu3ECAMRx7y1Ly
-elMttx5d/yriDrkdCf7+a/kIjgZH9DlAPCqm+TvAdbMZ2cg3OKzpq7ScpZP6Rx+x
-3832kLNfL02NyTYMyd3t
-=7wPX
+iQJ8BAEBCABmBQJU7aSNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOcIIQAJ6txUlHFqgkLLxYCdXT07VU
+UU6G6j3b69HMQuPzQoNE0R0fjsOnGeyY6qXSC6GZJDS6k9rIm/YBChb1b3lRL8aS
+efJZaMaOrMzorh1QpQpou3O9no9bbIp1R7JpQJTWKbN7lI1GZwzMH+Hx9RwzOqOv
+zMmSgVoOHxkzfZvr4UQdlqN0C3QbD6nJGb3DU0e2Z3yVhYXLtFjNjaAJV0ORbJ2z
+JfOnbHJYSR56M44dv2Cat4VwKrrAy891bRKp36ZyThwK5X2UKLTW5vN3efwUvhuF
+uOGYhBo5H9vlHXhfd349CEuAZWttFtmC8n9+LU+vI3rhCKELTQC8dp+ZPJNOP3g7
+UouxUeUa+7QEYGeX5DdEa4eioHQXSRrh3HgP9+0fK0DBXPo6iOoZhqW8bY4ig5AT
+xyH0n5cm0WPdjOwL2qUvsgibLSGU4LbBZqEs9EYpqIq2+IOkX/ykVv6lymmYIlP2
+8zzjGIelEG6yNOgQHAq0pSMykejhs2z1SKkpR+ven0ga+P3PYubfsXXJ07ucHGiS
+wyTGA5a5VN8yES+XIwOeNYAHhYD9oAzGXSuKLgRYugwkjRWgOWxAqWSFhD9X+XcH
+zzL8jG53/UR3W24M9g8FcHgwVmfxb2k8GFHUPdH/4XPqNqjQ9L6joAdafH1rnQic
+vS76B+XKqTMYmAjXu0/G
+=Givp
 -----END PGP SIGNATURE-----
