@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/lximage-qt
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/lximage-qt/ChangeLog,v 1.4 2014/11/08 17:44:07 jauhien Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/lximage-qt/ChangeLog,v 1.5 2015/02/25 10:31:36 yngwin Exp $
+
+*lximage-qt-0.4.0 (25 Feb 2015)
+
+  25 Feb 2015; Ben de Groot <yngwin@gentoo.org> +lximage-qt-0.4.0.ebuild:
+  version bump
 
 *lximage-qt-0.3.0 (08 Nov 2014)
 
